2007-03-19  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Use the proper value for modem data notifies sent
	to the client, it was 7, use 107 instead.

2006-12-01  Corey Minyard <minyard@acm.org>

	* readconfig.c: Handle an ending banner that does not have a '\n'
	in the last line.

2006-01-16  Corey Minyard <minyard@acm.org>

	* ser2net.8: Fix the documentation for control ports.

2006-01-09  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Don't kill the session if TIOCCBRK doesn't work.

2005-12-29  Corey Minyard <minyard@acm.org>

	* dataxfer.c, devcfg.c, devcfg.h, ser2net.conf, ser2net.8: Added a
	'\s' banner token for printing out the serial parameters.

	* ser2net.conf: Cleaned up the ugly banner3.

	* Makefile.am: Add ser2net.init to EXTRA_DIST.

	* configure.in: Move to version 2.3.

2005-12-29  Aurelien Jarno <aurel32@debian.org>	
	
	* devcfg.c: Don't include "termio.h", but do include
	"sys/ioctl.h".

2005-10-20  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fixed a problem with rfc2217 stop bit size setting.
	It was interpreting the value of "3" as 2 stop bits, but 3 is for
	1.5 stop bits, and 2 is for 2 stop bits.

	* controller.c: Fixed some warnings dealing with char/unsigned
	char problems.
	* dataxfer.c: ditto
	* telnet.c: ditto

2005-08-25  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fix a problem wih EAGAIN just returning and not
	retrying the operation on writing data that has just been read.
	Thanks to Shinlun Hsieh <yngwie_x@yahoo.com> for pointing this out.

2005-07-07  G Goodwill <ggg2sforge at sourceforge.net>

	* dataxfer.c, devcfg.c: Added support for cygwin.

2005-07-07  Rajiv Aaron Manglani <rajav at gentoo.org>

	* configure.in: Make the use of tcp wrappers optional.
	
2005-06-13  Yura Kalinichenko <yuk@iceb.vinnitsa.com>

	* controller.c, devcfg.c, ser2net.8, ser2net.conf: Added 57600
	baud support.

	* dataxfer.c: Don't to breaks on printer lines.

2005-02-12  Corey Minyard <minyard@acm.org>
